--- a/project/config/exp/cnn/basic_cnn.yml
+++ b/project/config/exp/cnn/basic_cnn.yml
@@ -18,14 +18,29 @@ model:
     kernel_size: 5
 
 # Data
-train:
-  data_pth: "project/data/train"
+datasets:
+-
+  set: "train"
+  split: [0, 0.8]
+  path: "project/data/train"
   batch_size: 32
   tfm: "fft"
   shuffle: True
+  num_workers: 4
 
-test:
-  data_pth: "project/data/test"
+-
+  set: "val"
+  split: [0.8, 1]
+  path: "project/data/train"
   batch_size: 32
   tfm: "fft"
   shuffle: False
+  num_workers: 4
+
+-
+  set: "test"
+  path: "project/data/test"
+  batch_size: 32
+  tfm: "fft"
+  shuffle: False
+  num_workers: 4
