--- a/project/config/exp/cnn/basic_cnn.yml
+++ b/project/config/exp/cnn/basic_cnn.yml
@@ -4,19 +4,6 @@ name: "basic_cnn"
 description: "Basic CNN model for signal classification"
 task: "v1"
 
-# Model
-model:
-  name : "CnnBase"
-  n_epochs: 10
-  optimizer: "SGD"
-  use_scheduler: True
-  learning_rate: 0.01
-  criterion: "BCEWithLogitsLoss"
-  config:
-    input_shape: 19
-    output_shape: 1
-    kernel_size: 5
-
 # Data
 datasets:
 -
@@ -44,3 +31,25 @@ datasets:
   tfm: "fft"
   shuffle: False
   num_workers: 4
+
+# Model
+model:
+  name : "CnnBase"
+  n_epochs: 10
+  optimizer: "SGD"
+  use_scheduler: True
+  learning_rate: 0.01
+  criterion: "BCEWithLogitsLoss"
+  config:
+    layers: 
+      - out_channels_multiplier: 2
+        pooling: "max"
+      - out_channels_multiplier: 4
+        pooling: "max"
+      - out_channels_multiplier: 8
+        pooling: "max"
+      - out_channels_multiplier: 16
+        pooling: "adaptiveavg"
+    input_shape: 19
+    output_shape: 1
+    kernel_size: 5
