--- a/project/config/exp/cnn/basic_cnn.yml
+++ b/project/config/exp/cnn/basic_cnn.yml
@@ -9,7 +9,7 @@ datasets:
 -
   set: "train"
   split: [0, 0.8]
-  path: "project/data/train"
+  path: "/home/ogut/data"
   batch_size: 32
   tfm: "fft"
   shuffle: True
@@ -18,7 +18,7 @@ datasets:
 -
   set: "val"
   split: [0.8, 1]
-  path: "project/data/train"
+  path: "/home/ogut/data"
   batch_size: 32
   tfm: "fft"
   shuffle: False
@@ -26,7 +26,7 @@ datasets:
 
 -
   set: "test"
-  path: "project/data/test"
+  path: "/home/ogut/data"
   batch_size: 32
   tfm: "fft"
   shuffle: False
