--- a/project/config/exp/gml/basic_correlation_gml.yml
+++ b/project/config/exp/gml/basic_correlation_gml.yml
@@ -1,7 +1,7 @@
 ---
-experiment: "cnn"
-name: "basic_cnn"
-description: "Basic CNN model for signal classification"
+experiment: "correlation_gml"
+name: "basic_correlation_gml"
+description: "Basic graph ml models, with correlation graph construction"
 task: "v1"
 
 # Data
@@ -12,7 +12,8 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "none"
+  G_construction: "correlation"
+  edge_threshold: 0.5
   shuffle: True
   num_workers: 4
 
@@ -22,7 +23,8 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "none"
+  G_construction: "correlation"
+  edge_threshold: 0.5
   shuffle: False
   num_workers: 4
 
@@ -31,7 +33,8 @@ datasets:
   path: "project/data/test"
   batch_size: 32
   tfm: "fft"
-  G_construction: "none"
+  G_construction: "correlation"
+  edge_threshold: 0.5
   shuffle: False
   num_workers: 4
 
@@ -44,7 +47,7 @@ model:
   learning_rate: 0.01
   criterion: "BCEWithLogitsLoss"
   config:
-    layers: 
+    layers:
       - out_channels_multiplier: 2
         pooling: "max"
       - out_channels_multiplier: 4
