update config graph

--- a/project/config/exp/basic_correlation_gml.yml
+++ b/project/config/exp/basic_correlation_gml.yml
@@ -12,8 +12,11 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "correlation"
-  edge_threshold: 0.5
+  graph: 
+    type: "correlation"
+    path: "project/data/distances_3d.csv"
+
+  edge_threshold: 1
   shuffle: True
   num_workers: 4
 
@@ -23,8 +26,10 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "correlation"
-  edge_threshold: 0.5
+  graph: 
+    type: "correlation"
+    path: "project/data/distances_3d.csv"
+  edge_threshold: 1
   shuffle: False
   num_workers: 4
 
@@ -33,8 +38,10 @@ datasets:
   path: "project/data/test"
   batch_size: 32
   tfm: "fft"
-  G_construction: "correlation"
-  edge_threshold: 0.5
+  graph: 
+    type: "correlation"
+    path: "project/data/distances_3d.csv"
+  edge_threshold: 1
   shuffle: False
   num_workers: 4
 
