--- a/project/config/exp/basic_gat.yml
+++ b/project/config/exp/basic_gat.yml
@@ -13,7 +13,10 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "distance"
+  graph: 
+    type: "distance"
+    path: "project/data/distances_3d.csv"
+
   edge_threshold: 1
   shuffle: True
   num_workers: 4
@@ -24,7 +27,9 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
-  G_construction: "distance"
+  graph: 
+    type: "distance"
+    path: "project/data/distances_3d.csv"
   edge_threshold: 1
   shuffle: False
   num_workers: 4
@@ -34,7 +39,9 @@ datasets:
   path: "project/data/test"
   batch_size: 32
   tfm: "fft"
-  G_construction: "distance"
+  graph: 
+    type: "distance"
+    path: "project/data/distances_3d.csv"
   edge_threshold: 1
   shuffle: False
   num_workers: 4
