--- a/project/config/exp/test/basic_correlation_gml.yml
+++ b/project/config/exp/test/basic_correlation_gml.yml
@@ -9,21 +9,21 @@ datasets:
 -
   set: "train"
   split: [0, 0.8]
-  path: "project/data/train"
+  path: "../data/train"
   batch_size: 32
   tfm: "fft"
   graph: 
     type: "correlation"
     path: "project/data/distances_3d.csv"
 
-  edge_threshold: 1
+  edge_threshold: 0.6
   shuffle: True
   num_workers: 4
 
 -
   set: "val"
   split: [0.8, 1]
-  path: "project/data/train"
+  path: "../data/train"
   batch_size: 32
   tfm: "fft"
   graph: 
@@ -35,7 +35,7 @@ datasets:
 
 -
   set: "test"
-  path: "project/data/test"
+  path: "../data/test"
   batch_size: 32
   tfm: "fft"
   graph: 
