--- a/project/config/exp/test/basic_distance_gml.yml
+++ b/project/config/exp/test/basic_distance_gml.yml
@@ -9,12 +9,12 @@ datasets:
 -
   set: "train"
   split: [0, 0.8]
-  path: "project/data/train"
+  path: "../data/train"
   batch_size: 32
   tfm: "fft"
   graph: 
     type: "distance"
-    path: "project/data/distances_3d.csv"
+    path: "../data/distances_3d.csv"
 
   edge_threshold: 1
   shuffle: True
@@ -23,24 +23,24 @@ datasets:
 -
   set: "val"
   split: [0.8, 1]
-  path: "project/data/train"
+  path: "../data/train"
   batch_size: 32
   tfm: "fft"
   graph: 
     type: "distance"
-    path: "project/data/distances_3d.csv"
+    path: "../data/distances_3d.csv"
   edge_threshold: 1
   shuffle: False
   num_workers: 4
 
 -
   set: "test"
-  path: "project/data/test"
+  path: "../data/test"
   batch_size: 32
   tfm: "fft"
   graph: 
     type: "distance"
-    path: "project/data/distances_3d.csv"
+    path: "../data/distances_3d.csv"
   edge_threshold: 1
   shuffle: False
   num_workers: 4
