--- a/project/config/exp/cnn/cnn_clean_adam_ds.yml
+++ b/project/config/exp/cnn/cnn_clean_adam_ds.yml
@@ -8,7 +8,7 @@ task: "v1"
 datasets:
 -
   set: "train"
-  split: [0, 0.8]
+  val_size: 0.2
   path: "project/data/train"
   batch_size: 32
   tfm: "clean"
@@ -19,7 +19,7 @@ datasets:
 
 -
   set: "val"
-  split: [0.8, 1]
+  val_size: 0.2
   path: "project/data/train"
   batch_size: 32
   tfm: "clean"
