--- a/project/config/exp/gcn/basic_gcn.yml
+++ b/project/config/exp/gcn/basic_gcn.yml
@@ -8,7 +8,7 @@ task: "v1"
 datasets:
 -
   set: "train"
-  split: [0, 0.8]
+  val_size: 0.2
   path: "/home/ogut/data/train"
   batch_size: 32
   tfm: "fft"
@@ -21,7 +21,7 @@ datasets:
 
 -
   set: "val"
-  split: [0.8, 1]
+  val_size: 0.2
   path: "/home/ogut/data/train"
   batch_size: 32
   tfm: "fft"
@@ -48,7 +48,7 @@ datasets:
 # Model
 model:
   name: "GCN"
-  n_epochs: 20
+  n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
   learning_rate: 0.001
