--- a/project/config/exp/gcn/gcn_corr.yml
+++ b/project/config/exp/gcn/gcn_corr.yml
@@ -1,8 +1,8 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
 name: "basic_gcn"
-description: "Two-layer GCN for seizure prediction"
-task: "v1"
+description: "Two-layer GCN for seizure prediction, using correlation graph."
+task: "seizure_prediction"
 
 # Data (same splits as before)
 datasets:
@@ -12,9 +12,10 @@ datasets:
   path: "project/data/train"
   batch_size: 32
   tfm: "fft"
+  sampling: True
+  size: 1
   graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
+      type: "correlation"
   edge_threshold: 0.5
   shuffle: True
   num_workers: 4
@@ -26,8 +27,7 @@ datasets:
   batch_size: 32
   tfm: "fft"
   graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
+      type: "correlation"
   edge_threshold: 0.5
   shuffle: False
   num_workers: 4
@@ -39,15 +39,14 @@ datasets:
   tfm: "fft"
   edge_threshold: 0.5
   graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 1
+      type: "correlation"
+  edge_threshold: 0.5
   shuffle: False
   num_workers: 4
 
 # Model
 model:
-  name: "GAT"
+  name: "GCN"
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
