--- a/project/config/exp/gcn/gcn_dist_down.yml
+++ b/project/config/exp/gcn/gcn_dist_down.yml
@@ -1,7 +1,7 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
 name: "basic_gcn"
-description: "Two-layer GCN for seizure prediction"
+description: "Two-layer GCN for seizure prediction with distance graph and downsample"
 task: "v1"
 
 # Data (same splits as before)
@@ -17,6 +17,8 @@ datasets:
       path: "./project/data/distances_3d.csv"
   edge_threshold: 0.5
   shuffle: True
+  sampling: True
+  size: 1
   num_workers: 4
 
 -
@@ -47,7 +49,7 @@ datasets:
 
 # Model
 model:
-  name: "GAT"
+  name: "GCN"
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
