--- a/project/config/exp/test/basic_distance_gml.yml
+++ b/project/config/exp/test/basic_distance_gml.yml
@@ -8,7 +8,7 @@ task: "v1"
 datasets:
 -
   set: "train"
-  split: [0, 0.8]
+  val_size: 0.2
   path: "../data/train"
   batch_size: 32
   tfm: "fft"
@@ -22,7 +22,7 @@ datasets:
 
 -
   set: "val"
-  split: [0.8, 1]
+  val_size: 0.2
   path: "../data/train"
   batch_size: 32
   tfm: "fft"
