--- a/project/config/exp/gcn/gcn_corr.yml
+++ b/project/config/exp/gcn/gcn_corr.yml
@@ -5,43 +5,32 @@ description: "Two-layer GCN for seizure prediction, using correlation graph."
 task: "seizure_prediction"
 
 # Data (same splits as before)
+config_dataset:
+  val_size: 0.2
+  tfm: "fft"
+  graph: 
+      type: "correlation"
+      edge_threshold: 0.8
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
   sampling: True
   size: 1
-  graph: 
-      type: "correlation"
-  edge_threshold: 0.8
   shuffle: True
-  num_workers: 4
 
 -
   set: "val"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "correlation"
-  edge_threshold: 0.8
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "project/data/test"
-  batch_size: 32
-  tfm: "fft"
-  edge_threshold: 0.8
-  graph: 
-      type: "correlation"
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
