--- a/project/config/exp/fcn/fcn_base_adam.yml
+++ b/project/config/exp/fcn/fcn_base_adam.yml
@@ -5,34 +5,29 @@ description: "FCN with base configuration"
 task: "v1"
 
 # Data
+config_dataset:
+  val_size: 0.2
+  tfm: ""
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: ""
   sampling: True
   size: 1
   shuffle: True
-  num_workers: 4
 
 -
   set: "val"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: ""
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "project/data/test"
-  batch_size: 32
-  tfm: ""
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
