--- a/project/config/exp/gcn/gcn_dist_fft.yml
+++ b/project/config/exp/gcn/gcn_dist_fft.yml
@@ -1,53 +1,40 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
-name: "basic_gcn"
-description: "Two-layer GCN for seizure prediction"
+name: "gcn_dist_fft"
+description: "Two-layer GCN for seizure prediction with distance graph in frequency domain."
 task: "v1"
-
 # Data (same splits as before)
+config_dataset:
+  val_size: 0.2
+  tfm: "fft"
+  graph: 
+      type: "distance"
+      path: "./project/data/distances_3d.csv"
+      edge_threshold: 0.5
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 0.5
+  sampling: True
+  size: 1
   shuffle: True
-  num_workers: 4
 
 -
   set: "val"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 0.5
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "project/data/test"
-  batch_size: 32
-  tfm: "fft"
-  edge_threshold: 0.5
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 1
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
-  name: "GAT"
+  name: "GCN"
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
