--- a/project/config/exp/gcn/gcn_dist_time.yml
+++ b/project/config/exp/gcn/gcn_dist_time.yml
@@ -1,51 +1,36 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
-name: "basic_gcn"
-description: "Two-layer GCN for seizure prediction with distance graph and downsample"
+name: "gcn_dist_time"
+description: "Two-layer GCN for seizure prediction with distance graph in time domain."
 task: "v1"
-
 # Data (same splits as before)
+config_dataset:
+  val_size: 0.2
+  tfm: "clean"
+  graph: 
+      type: "distance"
+      path: "./project/data/distances_3d.csv"
+      edge_threshold: 0.5
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 0.5
-  shuffle: True
   sampling: True
   size: 1
-  num_workers: 4
+  shuffle: True
 
 -
   set: "val"
-  val_size: 0.2
   path: "project/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 0.5
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "project/data/test"
-  batch_size: 32
-  tfm: "fft"
-  edge_threshold: 0.5
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-  edge_threshold: 1
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
