Updated cfg files to make them fit to new template

--- a/project/config/exp/lstm/lstm_gcn.yml
+++ b/project/config/exp/lstm/lstm_gcn.yml
@@ -4,44 +4,33 @@ name: "lstm"
 description: "Two-layer GCN with LSTM layer at the end for seizure prediction, using correlation graph."
 task: "seizure_prediction"
 
-# Data (same splits as before)
+# Data
+config_dataset:
+  val_size: 0.2
+  tfm: "fft"
+  graph: 
+      type: "correlation"
+      edge_threshold: 0.8
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  val_size: 0.2
   path: "/home/ogut/data/train"
-  batch_size: 32
-  tfm: "fft"
   sampling: True
   size: 1
-  graph: 
-      type: "correlation"
-  edge_threshold: 0.8
   shuffle: True
-  num_workers: 4
 
 -
   set: "val"
-  val_size: 0.2
   path: "/home/ogut/data/train"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "correlation"
-  edge_threshold: 0.8
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "/home/ogut/data/test"
-  batch_size: 32
-  tfm: "fft"
-  graph: 
-      type: "correlation"
-  edge_threshold: 0.8
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
