--- a/project/config/exp/gcn/gcn_coherence_band_energies.yml
+++ b/project/config/exp/gcn/gcn_coherence_band_energies.yml
@@ -10,35 +10,35 @@ config_dataset:
   tfm: "time_filtering"
   graph:
       type: "coherence_band_energies"
-      edge_threshold: 0.5
+      edge_threshold: 0.8
   num_workers: 4
-  batch_size: 32
+  batch_size: 64
 
 datasets:
 -
   set: "train"
-  path: "data/train"
+  path: "project/data/train"
   sampling: True
   size: 1
   shuffle: True
 
 -
   set: "val"
-  path: "data/train"
+  path: "project/data/train"
   shuffle: False
 
 -
   set: "test"
-  path: "data/test"
+  path: "project/data/test"
   shuffle: False
 
 # Model
 model:
   name: "GCN"
-  n_epochs: 50
+  n_epochs: 100
   optimizer: "Adam"
   use_scheduler: False
-  learning_rate: 0.0001
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
