--- a/project/config/exp/gcn/gcn_corr_fft.yml
+++ b/project/config/exp/gcn/gcn_corr_fft.yml
@@ -2,7 +2,7 @@
 experiment: "gnn"
 name: "gcn_corr_fft"
 description: "Two-layer GCN for seizure prediction, using correlation graph."
-task: "seizure_prediction"
+task: "dropout_rm"
 
 # Data (same splits as before)
 config_dataset:
@@ -12,7 +12,7 @@ config_dataset:
       type: "correlation"
       edge_threshold: 0.8
   num_workers: 4
-  batch_size: 32
+  batch_size: 64
 
 datasets:
 -
@@ -35,10 +35,10 @@ datasets:
 # Model
 model:
   name: "GCN"
-  n_epochs: 50
+  n_epochs: 20
   optimizer: "Adam"
-  use_scheduler: False
-  learning_rate: 0.0001
+  use_scheduler: True
+  learning_rate: 1e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
