--- a/project/config/exp/resnet/basic_resnet.yml
+++ b/project/config/exp/resnet/basic_resnet.yml
@@ -4,33 +4,29 @@ name: "basic_resnet"
 description: "Basic ResNet model for signal classification"
 task: "v1"
 
-# Data
+config_dataset:
+  val_size: 0.2
+  tfm: "fft"
+  num_workers: 4
+  batch_size: 32
+
 datasets:
 -
   set: "train"
-  split: [0, 0.8]
   path: "/home/ogut/data/train"
-  batch_size: 32
-  tfm: "fft"
+  sampling: True
+  size: 1
   shuffle: True
-  num_workers: 4
 
 -
   set: "val"
-  split: [0.8, 1]
   path: "/home/ogut/data/train"
-  batch_size: 32
-  tfm: "fft"
   shuffle: False
-  num_workers: 4
 
 -
   set: "test"
   path: "/home/ogut/data/test"
-  batch_size: 32
-  tfm: "fft"
   shuffle: False
-  num_workers: 4
 
 # Model
 model:
