--- a/project/config/exp/lstm/lstm_gcn.yml
+++ b/project/config/exp/lstm/lstm_gcn.yml
@@ -6,7 +6,8 @@ task: "seizure_prediction"
 
 # Data
 config_dataset:
-  val_size: 0.2
+  #val_size: 0.2
+  n_splits: 5
   tfm: "fft"
   graph: 
       type: "correlation"
