--- a/project/config/exp/cnn/cnn_clean.yml
+++ b/project/config/exp/cnn/cnn_clean.yml
@@ -6,10 +6,10 @@ task: "v1"
 
 # Data
 config_dataset:
-  val_size: 0.2
+  n_splits: 5
   tfm: "clean"
   num_workers: 4
-  batch_size: 32
+  batch_size: 64
 
 datasets:
 -
@@ -35,7 +35,7 @@ model:
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: True
-  learning_rate: 1e-2
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     input_shape: [19,3000]
