--- a/project/config/exp/cnn/cnn_fft.yml
+++ b/project/config/exp/cnn/cnn_fft.yml
@@ -1,15 +1,15 @@
 ---
-experiment: "fcn"
-name: "fcn_base"
-description: "FCN with base configuration"
+experiment: "cnn"
+name: "cnn_clean_func"
+description: "CNN in FFT domain"
 task: "v1"
 
 # Data
 config_dataset:
-  val_size: 0.2
-  tfm: ""
+  n_splits: 5
+  tfm: "fft"
   num_workers: 4
-  batch_size: 32
+  batch_size: 128
 
 datasets:
 -
@@ -31,11 +31,11 @@ datasets:
 
 # Model
 model:
-  name : "FCN"
-  n_epochs: 20
+  name : "CNN"
+  n_epochs: 50
   optimizer: "Adam"
   use_scheduler: True
-  learning_rate: 1e-2
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
-    input_channels: 19
+    input_shape: [19,354]
