--- a/project/config/exp/fcn/fcn_fft.yml
+++ b/project/config/exp/fcn/fcn_fft.yml
@@ -6,10 +6,10 @@ task: "v1"
 
 # Data
 config_dataset:
-  val_size: 0.2
+  n_splits: 5
   tfm: "fft"
   num_workers: 4
-  batch_size: 32
+  batch_size: 128
 
 datasets:
 -
@@ -32,10 +32,11 @@ datasets:
 # Model
 model:
   name : "FCN"
-  n_epochs: 20
+  n_epochs: 10
   optimizer: "Adam"
   use_scheduler: True
-  learning_rate: 1e-2
+  learning_rate: 2e-5
   criterion: "BCEWithLogitsLoss"
   config:
     input_channels: 19
+    num_classes: 1
