--- a/project/config/exp/gcn/gcn_coherence_band_energies_05.yml
+++ b/project/config/exp/gcn/gcn_coherence_band_energies_05.yml
@@ -1,16 +1,15 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
-name: "gcn_dist_time"
-description: "Two-layer GCN for seizure prediction with distance graph in time domain."
-task: "threshold_08"
+name: "gcn_coherence_band_energies"
+description: "Two-layer GCN for seizure prediction, using correlation graph."
+task: "threshold_05"
+
 # Data (same splits as before)
 config_dataset:
   n_splits: 5
-  tfm: "clean"
-  graph: 
-      type: "distance"
-      path: "./project/data/distances_3d.csv"
-      # path: "$HOME/EE452-Network-Machine-Learning/project/data/distances_3d.csv"
+  tfm: "time_filtering"
+  graph:
+      type: "coherence_band_energies"
       edge_threshold: 0.5
   num_workers: 4
   batch_size: 32
@@ -36,13 +35,13 @@ datasets:
 # Model
 model:
   name: "GCN"
-  n_epochs: 50
+  n_epochs: 100
   optimizer: "Adam"
   use_scheduler: False
-  learning_rate: 2e-4
+  learning_rate: 0.0002
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
-      3000
-    hidden_channels: 64
+      126
+    hidden_channels: 32
     # edge_index will be passed in code (fixed electrode graph)
