--- a/project/config/exp/gcn/gcn_corr_fft_05.yml
+++ b/project/config/exp/gcn/gcn_corr_fft_05.yml
@@ -1,41 +1,47 @@
 # project/config/exp/graph/basic_gcn.yml
 experiment: "gnn"
-name: "basic_gcn"
-description: "Two-layer GCN for seizure prediction"
-task: "v1"
+name: "gcn_corr_fft"
+description: "Two-layer GCN for seizure prediction, using correlation graph."
+task: "threshold_05"
 
+# Data (same splits as before)
 config_dataset:
-  val_size: 0.2
+  n_splits: 5
   tfm: "fft"
   graph: 
-      type: "distance"
-      path: "$HOME/EE452-Network-Machine-Learning/project/data/distances_3d.csv"
+      type: "correlation"
       edge_threshold: 0.5
   num_workers: 4
   batch_size: 32
+
 datasets:
 -
   set: "train"
-  path: "/home/ogut/data/train"
+  path: "project/data/train"
+  # path: "/home/ogut/data/train"
+  sampling: True
+  size: 1
   shuffle: True
 
 -
   set: "val"
-  path: "/home/ogut/data/train"
+  path: "project/data/train"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 -
   set: "test"
-  path: "/home/ogut/data/test"
+  path: "project/data/test"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 # Model
 model:
   name: "GCN"
-  n_epochs: 50
+  n_epochs: 20
   optimizer: "Adam"
-  use_scheduler: False
-  learning_rate: 0.001
+  use_scheduler: True
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
