--- a/project/config/exp/gcn/gcn_corr_time.yml
+++ b/project/config/exp/gcn/gcn_corr_time.yml
@@ -2,11 +2,11 @@
 experiment: "gnn"
 name: "gcn_corr_time"
 description: "Two-layer GCN for seizure prediction, using correlation graph in time domain."
-task: "seizure_prediction"
+task: "threshold_08"
 
 # Data (same splits as before)
 config_dataset:
-  val_size: 0.2
+  n_splits: 5
   tfm: "clean"
   graph: 
       type: "correlation"
@@ -18,6 +18,7 @@ datasets:
 -
   set: "train"
   path: "project/data/train"
+  # path: "/home/ogut/data/train"
   sampling: True
   size: 1
   shuffle: True
@@ -25,11 +26,13 @@ datasets:
 -
   set: "val"
   path: "project/data/train"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 -
   set: "test"
   path: "project/data/test"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 # Model
@@ -38,7 +41,7 @@ model:
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
-  learning_rate: 0.001
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
