--- a/project/config/exp/gcn/gcn_corr_time_05.yml
+++ b/project/config/exp/gcn/gcn_corr_time_05.yml
@@ -1,16 +1,16 @@
 # project/config/exp/graph/basic_gcn.yml
-experiment: "EccGatGNN"
-name: "EccGatGNN_coherence_band_energies"
-description: "EccGatGNN for seizure prediction, using coherence graph."
-task: "seizure_prediction"
+experiment: "gnn"
+name: "gcn_corr_time"
+description: "Two-layer GCN for seizure prediction, using correlation graph in time domain."
+task: "threshold_05"
 
 # Data (same splits as before)
 config_dataset:
-  val_size: 0.2
-  tfm: "time_filtering"
-  graph:
-      type: "coherence_band_energies"
-      edge_threshold: 0
+  n_splits: 5
+  tfm: "clean"
+  graph: 
+      type: "correlation"
+      edge_threshold: 0.5
   num_workers: 4
   batch_size: 32
 
@@ -18,6 +18,7 @@ datasets:
 -
   set: "train"
   path: "project/data/train"
+  # path: "/home/ogut/data/train"
   sampling: True
   size: 1
   shuffle: True
@@ -25,24 +26,25 @@ datasets:
 -
   set: "val"
   path: "project/data/train"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 -
   set: "test"
   path: "project/data/test"
+  # path: "/home/ogut/data/train"
   shuffle: False
 
 # Model
 model:
-  name: "EccGatGNN"
+  name: "GCN"
   n_epochs: 50
   optimizer: "Adam"
   use_scheduler: False
-  learning_rate: 0.0002
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
-      126
-    hidden_channels: 32
+      3000
+    hidden_channels: 64
     # edge_index will be passed in code (fixed electrode graph)
-    edge_attr_dim: 1
