--- a/project/config/exp/test/gcn_coherence_band_energies.yml
+++ b/project/config/exp/test/gcn_coherence_band_energies.yml
@@ -2,34 +2,37 @@
 experiment: "gnn"
 name: "gcn_coherence_band_energies"
 description: "Two-layer GCN for seizure prediction, using correlation graph."
-task: "threshold_08"
+task: "seizure_prediction"
 
 # Data (same splits as before)
 config_dataset:
-  val_size: 0.05
+  n_splits: 5
   tfm: "time_filtering"
   graph:
-      type: "coherence_band_energies"
+      type: "coherence"
       edge_threshold: 0.8
   num_workers: 4
-  batch_size: 32
+  batch_size: 64
 
 datasets:
 -
   set: "train"
-  path: "project/data/train"
+  # path: "project/data/train"
+  path: "/home/ogut/data/train"
   sampling: True
   size: 1
   shuffle: True
 
 -
   set: "val"
-  path: "project/data/train"
+  # path: "project/data/train"
+  path: "/home/ogut/data/train"
   shuffle: False
 
 -
   set: "test"
-  path: "project/data/test"
+  # path: "project/data/test"
+  path: "/home/ogut/data/test"
   shuffle: False
 
 # Model
@@ -38,10 +41,10 @@ model:
   n_epochs: 100
   optimizer: "Adam"
   use_scheduler: False
-  learning_rate: 0.0002
+  learning_rate: 2e-4
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
-      126
-    hidden_channels: 32
+      30
+    hidden_channels: 10
     # edge_index will be passed in code (fixed electrode graph)
