--- a/project/config/exp/lstm/lstm_gcn.yml
+++ b/project/config/exp/lstm/lstm_gcn.yml
@@ -8,10 +8,10 @@ task: "seizure_prediction"
 config_dataset:
   #val_size: 0.2
   n_splits: 5
-  tfm: "fft"
+  tfm: "psd"
   graph: 
-      type: "correlation"
-      edge_threshold: 0.8
+      type: "coherence"
+      edge_threshold: 0.5
   num_workers: 4
   batch_size: 32
 
@@ -43,7 +43,7 @@ model:
   criterion: "BCEWithLogitsLoss"
   config:
     in_channels:  # number of features per node (e.g. timepoints after FFT)
-      354 
+      30
     hidden_channels_gcn: 64
 
     hidden_channels_lstm: 128 
